2009-07-28
    * merged RtMIDI 1.0.10

2009-06-08
    * check for Qt version >= 4.4.0
    * updated documentation

2009-06-07
    * fixed release/grab keyboard and SoundFont import dialog

2009-06-07
    * private development files excluded from the tarball
    * don't install documents, leave it to packagers
    * removed shebang from the txt2ins.awk script
    * man page, by Mehdi Dogguy. Thanks!

2009-05-31
    * release 0.2.5

2009-05-30
    * Spanish help file translated.

2009-05-28
    * Bender returns to zero when released

2009-05-26
    * Dialogs: help "WhatIsThis?" strings, layouts
    * updated spanish translation  

2009-05-25
    * Import Sound Font Instruments

2009-05-12
    * fix for bug# 2790316 - startup crash in OSX when no MIDI port present 

2009-04-23
    * implemented RFE# 2779744 - keyboard window: always on top
    * MIDI In always enabled on Linux and Mac

2009-04-05
    * release 0.2.4

2009-02-08
    * merged RtMIDI 1.0.8
    * overhauled preferences: removed channels, velocity, base octave 

2009-01-18
    * implemented RFE #2488065 - online help
    * applied patch #2490414 from Serdar Soytetir: Turkish translation
    * build app bundle in Mac OSX 

2008-12-03    
    * version string = 0.2.4cvs
    * better about dialog
    * thru function: Send every incoming event to the output port, do not 
      modify incoming channels. Process inside MIDI callback for better 
      performance.

2008-11-30 0.2.3
    * fix for bug #2364787 Rosegarden renders vmpk input unusable
    * optimization for Linux: do not create an ALSA queue

2008-10-19 0.2.2
    * true fix for RtMIDI bug #2158014 Crash in windows
    * Spanish translation updated

2008-10-14
    * fix for bug: #2164586 segmentation fault at startup

2008-10-13
    * version string changed

2008-10-12
    * check for IO errors (keyboard map and instruments files)
    * fix for bug: #2162189 No warning message despite keymap not saved 

2008-10-11 0.2.1